# siaplulus

./: .gitignore  .prototools  AGENTS.md  PRD.md  README.md  biome.json  commitlint.config.ts  docker-compose.yml  lefthook.yml  package.json  pnpm-lock.yaml
.moon/: tasks.yml  toolchains.yml  workspace.yml
apps/api/: .env.example  Dockerfile  README.md  alembic.ini  moon.yml  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260409_0615-bc27ff799899_add_users_and_profiles_tables.py
apps/api/app/: main.py
apps/api/app/api/auth/: router.py  serializer.py
apps/api/app/api/users/: serializer.py
apps/api/app/core/: database.py  logging.py  settings.py
apps/api/app/core/security/: jwt.py  password.py
apps/api/app/models/: profile.py  user.py
apps/api/app/modules/auth/: service.py
apps/web/: .cta.json  Dockerfile  biome.json  components.json  moon.yml  nginx.conf  package.json  vite.config.ts
apps/web/src/: styles.css
apps/web/src/components/: header.tsx
apps/web/src/lib/: api.ts
apps/web/src/modules/auth/hooks/: use-login.ts  use-me.ts
apps/web/src/routes/: __root.tsx
