[project]
name = "api"
version = "0.1.0"
description = "Siaplulus Backend API"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "celery>=5.6.3",
    "fastapi>=0.135.3",
    "loguru>=0.7.3",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "scalar-fastapi>=1.8.1",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.44.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "ruff>=0.15.9",
]

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I", "N", "UP"]

[tool.ruff.format]
quote-style = "double"
