[project]
name = "api"
version = "0.1.0"
description = "Siaplulus Backend API"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.30.0",
    "bcrypt>=4.2.3",
    "celery>=5.6.3",
    "email-validator>=2.2.0",
    "fastapi>=0.135.3",
    "greenlet>=3.1.1",
    "loguru>=0.7.3",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.2",
    "pydantic-settings>=2.7.1",
    "redis>=7.4.0",
    "scalar-fastapi>=1.8.1",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.44.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "ruff>=0.15.9",
]

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I", "N", "UP"]

[tool.ruff.format]
quote-style = "double"
